--- a/Assignment1/Assignment1.csproj
+++ b/Assignment1/Assignment1.csproj
@@ -55,7 +55,8 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Clock.cs" />
+    <Compile Include="Add.cs" />
+    <Compile Include="List.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -104,7 +105,12 @@
     <AndroidResource Include="Resources\drawable\add.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\clock.axml">
+    <AndroidResource Include="Resources\layout\list.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\add.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
